RESOLVED FIXED 287468
Fix memory leak in `ReplayKitCaptureSource`
https://bugs.webkit.org/show_bug.cgi?id=287468
Summary Fix memory leak in `ReplayKitCaptureSource`
Aditya Keerthi
Reported 2025-02-10 22:17:03 PST
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-10 22:17:15 PST
Aditya Keerthi
Comment 2 2025-02-10 22:25:00 PST
EWS
Comment 3 2025-02-11 11:21:41 PST
Committed 290227@main (059e3e6c51e4): <https://commits.webkit.org/290227@main> Reviewed commits have been landed. Closing PR #40402 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.