Fix memory leak in `ReplayKitCaptureSource` https://bugs.webkit.org/show_bug.cgi?id=287468 rdar://144590066

Reviewed by Abrar Rahman Protyasha and Wenson Hsieh.

* Source/WebCore/platform/mediastream/ios/ReplayKitCaptureSource.mm:
(WebCore::ReplayKitCaptureSource::start):

`m_recorderHelper` is a `RetainPtr` and `-[WebCoreReplayKitScreenRecorderHelper initWithCallback:]`
returns a +1 object. Use `adoptNS` to avoid leaking memory.

Canonical link: https://commits.webkit.org/290227@main